fix merge compilation errors