@@ -1,34 +1,25 @@
 /* This file is part of KeY - https://key-project.org
  * KeY is licensed under the GNU General Public License Version 2
  * SPDX-License-Identifier: GPL-2.0-only */
+
 package org.key_project.proofmanagement.check.dependency;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.stream.Collectors;
-
 import de.uka.ilkd.key.java.Services;
-import de.uka.ilkd.key.java.abstraction.KeYJavaType;
+import de.uka.ilkd.key.java.ast.abstraction.KeYJavaType;
 import de.uka.ilkd.key.logic.op.IObserverFunction;
 import de.uka.ilkd.key.logic.op.Modality;
 import de.uka.ilkd.key.logic.op.ProgramMethod;
 import de.uka.ilkd.key.proof.Proof;
-import de.uka.ilkd.key.proof.io.intermediate.AppIntermediate;
-import de.uka.ilkd.key.proof.io.intermediate.AppNodeIntermediate;
-import de.uka.ilkd.key.proof.io.intermediate.BuiltInAppIntermediate;
-import de.uka.ilkd.key.proof.io.intermediate.NodeIntermediate;
-import de.uka.ilkd.key.proof.io.intermediate.TacletAppIntermediate;
+import de.uka.ilkd.key.proof.io.intermediate.*;
 import de.uka.ilkd.key.proof.mgt.SpecificationRepository;
 import de.uka.ilkd.key.speclang.ClassAxiom;
 import de.uka.ilkd.key.speclang.Contract;
 import de.uka.ilkd.key.speclang.ContractAxiom;
-
 import org.key_project.proofmanagement.io.LogLevel;
 import org.key_project.proofmanagement.io.Logger;
 import org.key_project.util.collection.ImmutableSet;
+
+import java.util.*;
 
 import static org.key_project.proofmanagement.check.dependency.DependencyGraph.EdgeType.TERMINATION_INSENSITIVE;
 import static org.key_project.proofmanagement.check.dependency.DependencyGraph.EdgeType.TERMINATION_SENSITIVE;
@@ -40,6 +31,7 @@ import static org.key_project.proofmanagement.check.dependency.DependencyGraph.E
  * Partial_invariant_axiom_... invariants
  * user defined taclets
  */
+
 /**
  * Walker for collecting contract applications. This includes:
  * <ul>
@@ -55,19 +47,23 @@ public class ContractAppCollector extends NodeIntermediateWalker {
      * the proof we search for contract applications (needed to get the SpecificationRepository,
      * JavaInfo, ...)
      */
-    private Proof proof;
+    private final Proof proof;
 
-    /** the logger to print out messages */
-    private Logger logger;
+    /**
+     * the logger to print out messages
+     */
+    private final Logger logger;
 
-    /** the contracts (by name) as found by this collector as well as the termination type */
-    private Map<String, DependencyGraph.EdgeType> result = new HashMap<>();
+    /**
+     * the contracts (by name) as found by this collector as well as the termination type
+     */
+    private final Map<String, DependencyGraph.EdgeType> result = new HashMap<>();
 
     /**
      * Creates a new collector for the given proof, starting at given root node.
      *
-     * @param root the root node to start from
-     * @param proof the proof object (needed to get SpecificationRepository, JavaInfo, ...)
+     * @param root   the root node to start from
+     * @param proof  the proof object (needed to get SpecificationRepository, JavaInfo, ...)
      * @param logger the logger to print out messages
      */
     public ContractAppCollector(NodeIntermediate root, Proof proof, Logger logger) {
@@ -82,15 +78,14 @@ public class ContractAppCollector extends NodeIntermediateWalker {
 
     @Override
     protected void doAction(NodeIntermediate node) {
-        if (node instanceof AppNodeIntermediate) {
-            AppNodeIntermediate appNode = (AppNodeIntermediate) node;
+        if (node instanceof AppNodeIntermediate appNode) {
             AppIntermediate appIntermediate = appNode.getIntermediateRuleApp();
             String ruleName = appIntermediate.getRuleName();
 
             // relevant rules are:
             // Use Operation Contract builtin-rule
             // Use Dependency Contract builtin-rule
-            // Contract_axiom_for_... taclet (model methods)
+            // Contract_axiom_for_... Taclet (model methods)
             if (ruleName.equals("Use Operation Contract")
                     || ruleName.equals("Use Dependency Contract")) {
                 BuiltInAppIntermediate biApp = (BuiltInAppIntermediate) appIntermediate;
@@ -128,7 +123,7 @@ public class ContractAppCollector extends NodeIntermediateWalker {
 
         if (classType == null) {
             // since className does not include package prefix, we have to search the complete list
-            Set<KeYJavaType> allTypes = services.getJavaInfo().getAllKeYJavaTypes();
+            var allTypes = services.getJavaInfo().getAllKeYJavaTypes();
             for (KeYJavaType t : allTypes) {
                 if (t.getJavaType().getName().equals(className)) {
                     // found match
@@ -140,7 +135,7 @@ public class ContractAppCollector extends NodeIntermediateWalker {
             if (classType == null) {
                 // still no hit -> critical error
                 throw new NullPointerException("KeYJavaType still is null for class with name "
-                    + className);
+                        + className);
             }
         }
 
@@ -150,7 +145,7 @@ public class ContractAppCollector extends NodeIntermediateWalker {
         Set<ClassAxiom> axioms = specRepo.getClassAxioms(classType).toSet();
         List<ClassAxiom> axiomList = axioms.stream()
                 .filter(a -> a.getName().equals(axiomName))
-                .collect(Collectors.toList());
+                .toList();
         /*
          * the assertions below always hold for current KeY implementation, where
          * only one model method with same name is allowed (no overloading)
@@ -199,7 +194,7 @@ public class ContractAppCollector extends NodeIntermediateWalker {
             // in default case (e.g. legacy proofs without saved modality information)
             // we assume diamond modality but print a warning
             logger.print(LogLevel.WARNING, "No saved modality information was found!" +
-                " Assuming \"diamond\" (incomplete for box contracts)!");
+                    " Assuming \"diamond\" (incomplete for box contracts)!");
             edgeType = TERMINATION_SENSITIVE;
         } else if (modality.terminationSensitive()) {
             edgeType = TERMINATION_SENSITIVE;
